--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-30  David Wetzel <dave@turbocat.de>
+        * GSWeb.framework/GSWDynamicURLString.m
+        added dataUsingEncoding: allowLossyConversion:
+        * GSWeb.framework/GSWRequest.m
+        avoid cString (hint from David Ayers)
+
 2005-05-16  David Ayers  <d.ayers@inode.at>
 
 	* GSWAdaptors/common/GSWApp.h (GSWApp_New, GSWAppInfo_Init):
