* GSWeb.framework/GSWSubmitButton.m           added support for Direct Actions           removed category
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21931 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-31  David Wetzel <dave@turbocat.de>
+
+        * GSWeb.framework/GSWSubmitButton.m
+          added support for Direct Actions
+          removed category
+
 2005-10-04  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWRequest.m
