--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-11  David Wetzel <dave@turbocat.de>
+        
+        * GSWeb.framework/GSWHTMLComment.h
+        * GSWeb.framework/GSWHTMLComment.m
+        Removed multiple categories per file.
 2005-12-19  David Ayers  <d.ayers@inode.at>
 
 	* GSWAdaptors/Apache/mod_gsweb.c (GSWeb_Handler): Avoid endless
