* Version: Update to 1.3.0 	* config.mak.in: Update to use new GDL2 native library names.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@23520 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-09-15  David Ayers  <d.ayers@inode.at>
+
+	* Version: Update to 1.3.0
+	* config.mak.in: Update to use new GDL2 native library names.
+	
+2006-09-14  David Ayers  <d.ayers@inode.at>
+
+	* Branch 1.2 release series.
+	
 2006-01-26  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWAction.m (-[initWithRequest:]): Retain
