* GSWeb.framework/GSWDefaultAdaptorThread.m 	(readRequestReturnedRequestLine:returnedHeaders:returnedData:): 	Remove superflous sleep.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@23762 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-04  David Ayers  <ayers@fsfe.org>
 
+	* GSWeb.framework/GSWDefaultAdaptorThread.m
+	(readRequestReturnedRequestLine:returnedHeaders:returnedData:):
+	Remove superfluous sleep.
+
 	* Testing/DynamicElements/FileUpload1Page.gswc/FileUpload1Page.gswd
 	* Testing/DynamicElements/FileUpload1Page.gswc/FileUpload1Page.html
 	* Testing/DynamicElements/FileUpload1Page.h
