Use GNUSTEP_INSTALLATION_DOMAIN and DESTDIR
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@24097 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	Notice: you should now use 'make DESTDIR=/tmp/xxx install' if you
+	want to relocate all the installation into /tmp/xxx/
+
+	* Makefile.postamble: Use DESTDIR everywhere instead of
+	INSTALL_ROOT_DIR.
+	* GNUmakefile: Do set GNUSTEP_INSTALLATION_DIR.	
+	* GSWeb.framework/GNUmakefile: Same change.
+	* GSWExtensions.framework/GNUmakefile: Same change.
+	* GSWExtensionsGSW.framework/GNUmakefile: Same change.
+	* Examples/hello/GNUmakefile: Same change.
+
+
 2006-10-04  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWDefaultAdaptorThread.m
