GSWAdaptors/common/GSWLoadBalancing.c: small cosmetic changes in spacing
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@24215 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-19  David Wetzel <dave@turbocat.de>
+
+        * GSWAdaptors/common/GSWLoadBalancing.c: small cosmetic changes in spacing
+
 2006-12-12  David Ayers  <ayers@fsfe.org>
 
 	* GSWAdaptors/Apache/mod_gsweb.c: Add defines to support Apache 2.2.
