--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-18  Nicola Pero <nicola.pero@meta-innovation.com>
+
+	* configure.ac: Check for GNUSTEP_MAKEFILES, not GNUSTEP_SYSTEM_ROOT.
+	* configure: Regenerated.
+	* Makefile.postamble (config.mak): New rule.
+	
 2006-12-19  David Wetzel <dave@turbocat.de>
 
         * GSWAdaptors/common/GSWLoadBalancing.c: small cosmetic changes in spacing
