* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal): 	Remove dependency on GNUSTEP_SYSTEM_ROOT and search all domains 	in precedence for frameworks to load.
	* Doc/howto.gsdoc: Replace reference to GNUSTEP_SYSTEM_ROOT with
	new installation location.  Also remove refernece to obsolete debug extension.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@24641 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-12-12  David Ayers  <ayers@fsfe.org>
+
+	* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal):
+	Remove dependency on GNUSTEP_SYSTEM_ROOT and search all domains
+	in precedence for frameworks to load.
+
+	* Doc/howto.gsdoc: Replace reference to GNUSTEP_SYSTEM_ROOT with
+	new installation location.  Also remove refernece to obsolete debug extension.
+	
 2007-02-18  Nicola Pero <nicola.pero@meta-innovation.com>
 
 	* configure.ac: Check for GNUSTEP_MAKEFILES, not GNUSTEP_SYSTEM_ROOT.
