--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-04-13  David Wetzel <dave@turbocat.de>
+  * Merged files from my branch to head. Changes include:
+  * Nearly all Dynamic Elements rewritten
+  * More use of inheritance there
+  * Less logging
+  * Direct connect enables developers to access applications without web servers.
+
 2006-12-12  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal):
