--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
   * Less logging
   * Direct connect enables developers to access applications without web servers.
 
+  * Hello demo application:
+    fix double text field, update documentation, allow compilation with TCSDB
+
 2006-12-12  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal):
