* GSWKeyValueAssociation added _isValueSettable added _setValueNoValidation: inComponent: * GSWRepetition.m use private _setValueNoValidation: inComponent: to speed things up
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@25651 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,11 @@
         * GSWBindingNameAssociation.m
         * GSWAssociation.m
         add _setValueNoValidation:inComponent:
+        * GSWKeyValueAssociation
+        added _isValueSettable
+        added _setValueNoValidation: inComponent:
+        * GSWRepetition.m
+        use private _setValueNoValidation: inComponent: to speed things up
 
 2007-11-25  David Wetzel <dave@turbocat.de>
 	* GSWAdaptors/Apache2/mod_gsw.c
