* read POST data before contacting the app
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@26165 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-01  David Wetzel <dave@turbocat.de>
+        * GSWAdaptors/Apache2/mod_gsw.c
+        read POST data before contacting the app
+
 2008-02-18  David Wetzel <dave@turbocat.de>
         * GSWAdaptors/Apache2/mod_gsw.c
         pass more to the application
