* GSWeb.framework/GSWRequest.m (_getFormValuesFromMultipartFormData): 	Determine character set for parser by invoking charsetFromEncoding: 	on document instead of parser.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@26254 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
+2008-03-09  David Ayers  <ayers@fsfe.org>
+
+	* GSWeb.framework/GSWRequest.m (_getFormValuesFromMultipartFormData):
+	Determine character set for parser by invoking charsetFromEncoding:
+	on document instead of parser.
+
 2008-03-04  David Wetzel <dave@turbocat.de>
+	
         GSWeb.framework/GSWPageDefElement.m
         GSWeb.framework/GSWTemplateParserXML.h
         GSWeb.framework/GSWTemplateParserXML.m
