* GSWeb.framework/GSWApplication+Defaults.m ([+host]): Set default 	host to localhost.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@26257 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 	Determine character set for parser by invoking charsetFromEncoding:
 	on document instead of parser.
 
+	* GSWeb.framework/GSWApplication+Defaults.m ([+host]): Set default
+	host to localhost.
+
 2008-03-04  David Wetzel <dave@turbocat.de>
 	
         GSWeb.framework/GSWPageDefElement.m
