--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-10  David Wetzel <dave@turbocat.de>
+        GSWAdaptors/Apache2/mod_gsw.c
+        * use shared memory to share application statistics across httpd processes
+        * first version of load balancing
+
 2008-03-09  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWRequest.m (_getFormValuesFromMultipartFormData):
