various fixes. shared mem should work now :)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@26335 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@
         GSWeb.framework/GSWBindingNameAssociation.m
         * re-wrote initWithKeyPath:
 
+	GSWAdaptors/Apache2/mod_gsw.c
+        * various fixes
+
 2008-03-11  David Wetzel <dave@turbocat.de>
         GSWAdaptors/Apache2/mod_gsw.c
         * fixed http status bug
