GSWAdaptors/Apache2/mod_gsw.c * make load-balancing work * add refusing to app status
GSWeb.framework/...
* rewrote GSWComponentRequestHandler to make refusing work



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@26404 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2008-03-31  David Wetzel <dave@turbocat.de>
+        GSWAdaptors/Apache2/mod_gsw.c
+        * make load-balancing work
+        * add refusing to app status
+
+        GSWeb.framework/GSWApplication.m
+        GSWeb.framework/GSWRequestHandler.h
+        GSWeb.framework/GSWComponentRequestHandler.h
+        GSWeb.framework/GSWComponentRequestHandler.m
+        GSWeb.framework/GSWResponse.m
+        GSWeb.framework/GSWConstants.h
+        GSWeb.framework/GSWConstants.m
+        GSWeb.framework/GSWPrivate.h
+        GSWeb.framework/GSWApplication.h
+        * rewrote GSWComponentRequestHandler to make refusing work
+       
 2008-03-17  David Wetzel <dave@turbocat.de>
         GSWeb.framework/GSWAssociation.h/m
         + bindingInComponent
