--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-17  David Wetzel <dave@turbocat.de>
+        GSWeb.framework/GSWConstants.m
+        * remove comment
+
 2008-04-15  David Wetzel <dave@turbocat.de>
         GSWeb.framework/GSWConstants.m
         GSWExtensions.framework/GSWExtWOCompatibility.h
