--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-14  David Wetzel <dave@turbocat.de>
+	GSWeb.framework/GSWDirectActionRequestHandler.m:
+    * set status code in generateNullResponse, reformat, remove some logs
+
 2008-04-20  David Wetzel <dave@turbocat.de>
         GSWeb.framework/GSWApplication.m
         GSWeb.framework/GSWComponentRequestHandler.m
