--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-20  David Wetzel <dave@turbocat.de>
+        GSWeb.framework:
+        * fixed many warnings
+
 2008-07-14  David Wetzel <dave@turbocat.de>
 	GSWeb.framework/GSWDirectActionRequestHandler.m:
     * set status code in generateNullResponse, reformat, remove some logs
