* GSWeb.framework/GSWeb.h: Include new header.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@28180 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* GSWeb.framework/GSWImageInfo.h/m: New files.
 	* GSWeb.framework/GNUmakefile: Include new files.
 	* GSWeb.framework/GSWWOCompatibility.h: Include new files.
+	* GSWeb.framework/GSWeb.h: Include new header.
 	
 2008-10-24  David Ayers  <ayers@fsfe.org>
 
